修改升级后的兼容性问题